default/objects/pq_Influence_And_Support_Matrix__c/fields/Influence_Label__c.field-meta.xml
<CustomField>
    <fullName>Influence_Label__c</fullName>
    <label>Influence Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>