default/objects/pq_Influence_And_Support_Matrix__c/fields/Support_Label__c.field-meta.xml
<CustomField>
    <fullName>Support_Label__c</fullName>
    <label>Support Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>